--- a/score.html
+++ b/score.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Neural Network and Score Bar</title>
     <style>
@@ -62,16 +62,15 @@
             text-align: right;
         }
 
-.score-display {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start; /* Aligns items to the left */
-    width: 100%;
-    margin-top: 3px;
-    font-size: 10px; /* Adjust the font size as needed to make it appear smaller */
-    padding: 5px; /* Optional: Add padding to adjust the spacing */
-}
-
+        .score-display {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start; /* Aligns items to the left */
+            width: 100%;
+            margin-top: 3px;
+            font-size: 10px; /* Adjust the font size as needed to make it appear smaller */
+            padding: 5px; /* Optional: Add padding to adjust the spacing */
+        }
 
         .ensmarten-button {
             display: inline-block;
@@ -89,14 +88,14 @@
             transition: box-shadow 0.3s ease, transform 0.3s ease;
         }
 
-            .ensmarten-button:hover {
-                box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
-            }
+        .ensmarten-button:hover {
+            box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
+        }
 
-            .ensmarten-button:active {
-                box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-                transform: translateY(2px);
-            }
+        .ensmarten-button:active {
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+            transform: translateY(2px);
+        }
 
         /* Responsive adjustments for smaller devices */
         @media (max-width: 600px) {
@@ -108,7 +107,6 @@
                 margin-right: 5px;
             }
         }
-
     </style>
 </head>
 <body>
@@ -118,7 +116,6 @@
         </div>
         <div class="number-line">100</div>
         <div class="score-display" id="scoreDisplay">
-            
             <span id="scoreText">Score:</span>
             <a href="https://dormantone.github.io/collectivelearning/" target="_blank" class="ensmarten-button">Ensmarten</a>
             <div class="neural-network" id="network-container">
@@ -127,45 +124,56 @@
         </div>
     </div>
 
+    <!-- Firebase SDKs -->
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-functions.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
 
     <script>
         // Firebase initialization and score bar script
-        const firebaseConfig = {
-            apiKey: "AIzaSyAJsu36rCNyJG-d5RwGyhEK4P5N3LkXpBM",
-            authDomain: "collectivelearning-b4bb4.firebaseapp.com",
-            projectId: "collectivelearning-b4bb4",
-            storageBucket: "collectivelearning-b4bb4.appspot.com",
-            messagingSenderId: "9465764517",
-            appId: "1:9465764517:web:9d1cd2a4b8491a28cfcb4c",
-            measurementId: "G-LFGTGKHTKJ"
-        };
-
-        firebase.initializeApp(firebaseConfig);
-        const db = firebase.firestore();
-
         document.addEventListener('DOMContentLoaded', function () {
-            const maxScore = 100;
-            let totalScore = 0;
+            fetch('/__/firebase/init.json').then(async response => {
+                const firebaseConfig = await response.json();
+                firebase.initializeApp(firebaseConfig);
+            }).then(() => {
+                const functions = firebase.functions();
+                const maxScore = 100;
+                let totalScore = 0;
 
-            db.collection('teams').get().then((querySnapshot) => {
-                querySnapshot.forEach((doc) => {
-                    totalScore += doc.data().score || 0;
-                });
+                // Fetch scores
+                async function fetchScores() {
+                    try {
+                        const response = await fetch('https://us-central1-collectivelearning-b4bb4.cloudfunctions.net/fetchScores', {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json'
+                            }
+                        });
+                        if (!response.ok) {
+                            throw new Error('Network response was not ok ' + response.statusText);
+                        }
+                        const scores = await response.json();
+                        totalScore = Object.values(scores.data).reduce((a, b) => a + b, 0);
+                        updateScoreBar(totalScore, maxScore);
+                    } catch (error) {
+                        console.error('Fetch error: ', error);
+                    }
+                }
 
-                updateScoreBar(totalScore, maxScore);
+                function updateScoreBar(score, maxScore) {
+                    let scorePercentage = (score / maxScore) * 100;
+                    let scoreBar = document.getElementById('scoreBar');
+                    let scoreText = document.getElementById('scoreText');
+
+                    scoreBar.style.width = scorePercentage + '%';
+                    scoreText.textContent = 'Score: ' + score;
+                }
+
+                fetchScores();
+            }).catch(error => {
+                console.error('Error initializing Firebase:', error);
             });
         });
-
-        function updateScoreBar(score, maxScore) {
-            let scorePercentage = (score / maxScore) * 100;
-            let scoreBar = document.getElementById('scoreBar');
-            let scoreText = document.getElementById('scoreText');
-
-            scoreBar.style.width = scorePercentage + '%';
-            scoreText.textContent = 'Score: ' + score;
-        }
     </script>
 
     <script>
