--- a/score.html
+++ b/score.html
@@ -1,89 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <title>Neural Network and Score Bar</title>
+    <title>Score Bar</title>
     <style>
         body {
             color: white;
             background-color: #4b7a74;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            padding: 0;
-            font-family: 'Arial', sans-serif;
-        }
-
-        .main-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 90%; /* Adjusted for phone screens */
-            max-width: 500px; /* Maximum width */
-        }
-
-        .neural-network {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 2px;
-            width: 50px; /* 3 * 8px + 2 * 2px gap */
-            height: 50px; /* As above to make it square */
-            margin-right: 10px;
-            align-items: center;
-        }
-
-        .neuron {
-            width: 8px;
-            height: 8px;
-            border: 1px solid;
-            border-radius: 50%;
-            background-color: transparent;
         }
 
         .score-bar-container {
-            width: 100%; /* Adjusting width to account for the neural-network width */
+            width: 100%;
             background-color: #eee;
             border: 1px solid #000;
-            margin: 4px 0;
+            position: relative;
+            margin-bottom: 10px;
         }
 
         .score-bar {
-            height: 18px;
+            height: 15px;
             background-color: blue;
             width: 0%;
         }
 
         .number-line {
             position: relative;
-            width: 100%; /* Adjusting width to account for the neural-network width */
-            font-size: 6px;
-            line-height: 10px;
+            width: 100%;
+            height: 15px;
+            font-size: 8px;
+            line-height: 15px;
             text-align: right;
         }
 
         .score-display {
+            margin-top: 5px;
             display: flex;
             align-items: center;
-            justify-content: flex-start; /* Aligns items to the left */
-            width: 100%;
-            margin-top: 3px;
-            font-size: 10px; /* Adjust the font size as needed to make it appear smaller */
-            padding: 5px; /* Optional: Add padding to adjust the spacing */
         }
 
         .ensmarten-button {
             display: inline-block;
-            margin-left: 4px;
-            margin-right: 6px;
-            padding: 3px 6px;
+            margin-left: 10px;
+            padding: 5px 10px;
             background-color: #4CAF50;
             color: white;
             border: none;
             border-radius: 5px;
             text-decoration: none;
             cursor: pointer;
-            font-size: 13px; /* 40% smaller than 20px */
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
             transition: box-shadow 0.3s ease, transform 0.3s ease;
         }
@@ -96,170 +59,58 @@
             box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
             transform: translateY(2px);
         }
-
-        /* Responsive adjustments for smaller devices */
-        @media (max-width: 600px) {
-            .main-container {
-                width: 95%;
-            }
-
-            .neural-network {
-                margin-right: 5px;
-            }
-        }
     </style>
 </head>
 <body>
-    <div class="main-container">
-        <div class="score-bar-container">
-            <div class="score-bar" id="scoreBar"></div>
-        </div>
-        <div class="number-line">100</div>
-        <div class="score-display" id="scoreDisplay">
-            <span id="scoreText">Score:</span>
-            <a href="https://dormantone.github.io/collectivelearning/" target="_blank" class="ensmarten-button">Ensmarten</a>
-            <div class="neural-network" id="network-container">
-                <!-- Neural network will be dynamically inserted here -->
-            </div>
-        </div>
+    <div class="score-bar-container">
+        <div class="score-bar" id="scoreBar"></div>
+    </div>
+    <div class="number-line">
+        100
+    </div>
+    <div class="score-display" id="scoreDisplay">
+        <span id="scoreText">Score: </span>
+        <a href="https://dormantone.github.io/collectivelearning/" target="_blank" class="ensmarten-button">Ensmarten</a>
     </div>
 
-    <!-- Firebase SDKs -->
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-functions.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
 
     <script>
-        // Firebase initialization and score bar script
-        document.addEventListener('DOMContentLoaded', function () {
-            fetch('/__/firebase/init.json').then(async response => {
-                const firebaseConfig = await response.json();
-                firebase.initializeApp(firebaseConfig);
-            }).then(() => {
-                const functions = firebase.functions();
-                const maxScore = 100;
-                let totalScore = 0;
+        const firebaseConfig = {
+            apiKey: "AIzaSyAJsu36rCNyJG-d5RwGyhEK4P5N3LkXpBM",
+            authDomain: "collectivelearning-b4bb4.firebaseapp.com",
+            projectId: "collectivelearning-b4bb4",
+            storageBucket: "collectivelearning-b4bb4.appspot.com",
+            messagingSenderId: "9465764517",
+            appId: "1:9465764517:web:9d1cd2a4b8491a28cfcb4c",
+            measurementId: "G-LFGTGKHTKJ"
+        };
 
-                // Fetch scores
-                async function fetchScores() {
-                    try {
-                        const response = await fetch('https://us-central1-collectivelearning-b4bb4.cloudfunctions.net/fetchScores', {
-                            method: 'POST',
-                            headers: {
-                                'Content-Type': 'application/json'
-                            }
-                        });
-                        if (!response.ok) {
-                            throw new Error('Network response was not ok ' + response.statusText);
-                        }
-                        const scores = await response.json();
-                        totalScore = Object.values(scores.data).reduce((a, b) => a + b, 0);
-                        updateScoreBar(totalScore, maxScore);
-                    } catch (error) {
-                        console.error('Fetch error: ', error);
-                    }
-                }
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
 
-                function updateScoreBar(score, maxScore) {
-                    let scorePercentage = (score / maxScore) * 100;
-                    let scoreBar = document.getElementById('scoreBar');
-                    let scoreText = document.getElementById('scoreText');
+        document.addEventListener('DOMContentLoaded', function() {
+            const maxScore = 100;
+            let totalScore = 0;
 
-                    scoreBar.style.width = scorePercentage + '%';
-                    scoreText.textContent = 'Score: ' + score;
-                }
-
-                fetchScores();
-            }).catch(error => {
-                console.error('Error initializing Firebase:', error);
-            });
-        });
-    </script>
-
-    <script>
-        // Neural network script
-        document.addEventListener('DOMContentLoaded', function () {
-            const container = document.getElementById('network-container');
-            const gridSize = 3;
-            const neurons = [];
-            const spacing = 16; // Adjusted spacing for the smaller grid
-
-            function Neuron(x, y, id) {
-                this.id = id;
-                this.x = x * spacing;
-                this.y = y * spacing;
-                this.element = document.createElement('div');
-                this.element.classList.add('neuron');
-                this.element.style.left = this.x + 'px';
-                this.element.style.top = this.y + 'px';
-                this.isInhibitory = Math.random() < 0.5;
-                this.element.style.borderColor = this.isInhibitory ? 'blue' : 'red';
-                container.appendChild(this.element);
-
-                this.outputs = [];
-                this.fireRate = 1 / 5;  // Baseline firing rate
-                this.localTick = 0;
-
-                this.fire = function () {
-                    this.element.style.backgroundColor = this.isInhibitory ? 'blue' : 'red';
-                    setTimeout(() => this.element.style.backgroundColor = 'transparent', 200);
-                    this.outputs.forEach(output => output.receiveInput(this.isInhibitory));
-                };
-
-                this.update = function () {
-                    this.localTick++;
-                    if (this.localTick >= Math.ceil(5 / this.fireRate)) {
-                        this.fire();
-                        this.localTick = 0;
-                    }
-                };
-
-                this.receiveInput = function (isInhibitory) {
-                    if (isInhibitory) {
-                        this.fireRate = Math.max(this.fireRate - 1 / 5, 1 / 5);
-                    } else {
-                        this.fireRate = Math.min(this.fireRate + 1 / 5, 4 / 5);
-                    }
-                };
-            }
-
-            // Create neurons
-            for (let i = 0; i < gridSize; i++) {
-                for (let j = 0; j < gridSize; j++) {
-                    neurons.push(new Neuron(i, j, i * gridSize + j));
-                }
-            }
-
-            // Connect each neuron to two others
-            neurons.forEach(neuron => {
-                let firstConnectionMade = false;
-                while (!firstConnectionMade) {
-                    const randomIndex = Math.floor(Math.random() * neurons.length);
-                    const randomNeuron = neurons[randomIndex];
-                    if (neuron !== randomNeuron && !neuron.outputs.includes(randomNeuron)) {
-                        neuron.outputs.push(randomNeuron);
-                        firstConnectionMade = true;
-                    }
-                }
-
-                let secondConnectionMade = false;
-                while (!secondConnectionMade) {
-                    const randomIndex = Math.floor(Math.random() * neurons.length);
-                    const randomNeuron = neurons[randomIndex];
-                    if (neuron !== randomNeuron && !neuron.outputs.includes(randomNeuron)) {
-                        neuron.outputs.push(randomNeuron);
-                        secondConnectionMade = true;
-                    }
-                }
-            });
-
-            // Update loop
-            setInterval(function () {
-                neurons.forEach(neuron => {
-                    neuron.update();
+            db.collection('teams').get().then((querySnapshot) => {
+                querySnapshot.forEach((doc) => {
+                    totalScore += doc.data().score || 0;
                 });
-            }, 300); // Update frequency adjusted for smoother animation
+
+                updateScoreBar(totalScore, maxScore);
+            });
         });
+
+        function updateScoreBar(score, maxScore) {
+            let scorePercentage = (score / maxScore) * 100;
+            let scoreBar = document.getElementById('scoreBar');
+            let scoreText = document.getElementById('scoreText'); // Get the score text span
+
+            scoreBar.style.width = scorePercentage + '%';
+            scoreText.textContent = 'Score: ' + score; // Update only the text content
+        }
     </script>
 </body>
 </html>
