--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <head>
     <!-- Firebase SDK from CDN -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-functions.js"></script>
+
+
+    <script type="module" src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+    <script type="module" src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
+    <script type="module" src="https://www.gstatic.com/firebasejs/8.0.0/firebase-functions.js"></script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
